--- a/collated/main/A0139177W.md
+++ b/collated/main/A0139177W.md
@@ -1,18 +1,19 @@
 # A0139177W
-###### /java/seedu/ezdo/commons/core/Messages.java
+###### \java\seedu\ezdo\commons\core\Messages.java
 ``` java
     public static final String MESSAGE_RECUR_FAILURE = "Both the start and due dates cannot be empty "
             + "with a recur status present.";
 
 }
 ```
-###### /java/seedu/ezdo/commons/util/MultipleIndexCommandUtil.java
+###### \java\seedu\ezdo\commons\util\MultipleIndexCommandUtil.java
 ``` java
     /** checks if the tasks with the indexes specified are marked as done */
     public static boolean isDone(UnmodifiableObservableList<ReadOnlyTask> lastShownList,
             ArrayList<Integer> targetIndexes) {
         for (int i = 0; i < targetIndexes.size(); i++) {
-            Task task = (Task) lastShownList.get(targetIndexes.get(i) - 1);
+            int taskIndex = targetIndexes.get(i) - 1;
+            Task task = (Task) lastShownList.get(taskIndex);
             if (task.getDone()) {
                 return false;
             }
@@ -20,29 +21,7 @@
         return true;
     }
 ```
-###### /java/seedu/ezdo/commons/util/MultipleIndexCommandUtil.java
-``` java
-
-    /** adds read only tasks from the unmodifiable observable list to the ArrayList list */
-    public static void addReadOnlyTasksToList(ArrayList<ReadOnlyTask> list,
-            UnmodifiableObservableList<ReadOnlyTask> lastShownList, ArrayList<Integer> targetIndexes) {
-        for (int i = 0; i < targetIndexes.size(); i++) {
-            ReadOnlyTask readOnlyTask = lastShownList.get(targetIndexes.get(i) - 1);
-            list.add(readOnlyTask);
-        }
-    }
-
-    /** adds tasks from the unmodifiable observable list to the ArrayList list */
-    public static void addTasksToList(ArrayList<Task> list,
-            UnmodifiableObservableList<ReadOnlyTask> lastShownList, ArrayList<Integer> targetIndexes) {
-        for (int i = 0; i < targetIndexes.size(); i++) {
-            Task task = (Task) lastShownList.get(targetIndexes.get(i) - 1);
-            list.add(task);
-        }
-    }
-}
-```
-###### /java/seedu/ezdo/commons/util/RecurUtil.java
+###### \java\seedu\ezdo\commons\util\RecurUtil.java
 ``` java
 /**
  * Utility method for Recur
@@ -66,18 +45,15 @@ public class RecurUtil {
         final boolean isDueDateMissing = taskDueDate.isEmpty();
         final boolean isBothDatesMissing = isStartDateMissing && isDueDateMissing;
 
-        final boolean isRecurring = task.getRecur().isRecur();
+        final boolean recurStatus = task.getRecur().isRecur();
+        final boolean recurValid = !(isBothDatesMissing && recurStatus);
 
-        if (isBothDatesMissing && isRecurring) {
-            return false;
-        }
-
-        return true;
+        return recurValid;
     }
 
 }
 ```
-###### /java/seedu/ezdo/logic/commands/SelectCommand.java
+###### \java\seedu\ezdo\logic\commands\SelectCommand.java
 ``` java
 /**
  * Selects a task identified using its last displayed index from ezDo.
@@ -92,43 +68,64 @@ public class SelectCommand extends Command {
 
     public static final String MESSAGE_SELECT_TASK_SUCCESS = "Selected Task: %1$s";
     private final ArrayList<Integer> targetIndexes;
-    private final ArrayList<Task> tasksToToggle;
+    private final ArrayList<Task> tasksToToggle = new ArrayList<Task>();
 
+
+    /**
+     * Creates an arraylist of targetIndexes based on the total indexes quantity.
+     * @param indexes
+     */
     public SelectCommand(ArrayList<Integer> indexes) {
         this.targetIndexes = new ArrayList<Integer>(indexes);
-        this.tasksToToggle = new ArrayList<Task>();
     }
 
+    /**
+     * Executes the Select command.
+     */
     @Override
     public CommandResult execute() throws CommandException {
 
         UnmodifiableObservableList<ReadOnlyTask> lastShownList = model.getFilteredTaskList();
 
-        if (!MultipleIndexCommandUtil.isIndexValid(lastShownList, targetIndexes)) {
-            throw new CommandException(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
-        }
-
-        if (!MultipleIndexCommandUtil.isDone(lastShownList, targetIndexes)) {
-            throw new CommandException(Messages.MESSAGE_TASK_DONE);
-        }
+        checkValidIndexes(lastShownList);
+        checkTasksDone(lastShownList);
 
         MultipleIndexCommandUtil.addTasksToList(tasksToToggle, lastShownList, targetIndexes);
         model.toggleTasksSelect(tasksToToggle);
 
+        scrollToFinalTask();
+
+        return new CommandResult(String.format(MESSAGE_SELECT_TASK_SUCCESS, targetIndexes));
+
+    }
+
+    /** Scroll to the last task which was updated. **/
+    private void scrollToFinalTask() {
         int offset = 1;
         int lastIndex = targetIndexes.size() - offset;
         int lastElementInTargetIndexes = targetIndexes.get(lastIndex);
 
         JumpToListRequestEvent scrollToTask = new JumpToListRequestEvent(lastElementInTargetIndexes - offset);
         EventsCenter.getInstance().post(scrollToTask);
+    }
 
-        return new CommandResult(String.format(MESSAGE_SELECT_TASK_SUCCESS, targetIndexes));
+    /** checks if the tasks with the indexes specified are marked as done */
+    private void checkTasksDone(UnmodifiableObservableList<ReadOnlyTask> lastShownList) throws CommandException {
+        if (!MultipleIndexCommandUtil.isDone(lastShownList, targetIndexes)) {
+            throw new CommandException(Messages.MESSAGE_TASK_DONE);
+        }
+    }
 
+    /** checks if the indexes specified are all smaller than the size of the list and not 0 i.e. valid */
+    private void checkValidIndexes(UnmodifiableObservableList<ReadOnlyTask> lastShownList) throws CommandException {
+        if (!MultipleIndexCommandUtil.isIndexValid(lastShownList, targetIndexes)) {
+            throw new CommandException(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
+        }
     }
 
 }
 ```
-###### /java/seedu/ezdo/logic/parser/DateParser.java
+###### \java\seedu\ezdo\logic\parser\DateParser.java
 ``` java
     /**
      * Uses Natty dependency (natural language date parser) to manipulate date
@@ -168,11 +165,11 @@ public class SelectCommand extends Command {
         return parsedDate;
     }
 ```
-###### /java/seedu/ezdo/logic/parser/DateParser.java
+###### \java\seedu\ezdo\logic\parser\DateParser.java
 ``` java
 }
 ```
-###### /java/seedu/ezdo/logic/parser/ParserUtil.java
+###### \java\seedu\ezdo\logic\parser\ParserUtil.java
 ``` java
     /**
      * Parses a {@code Optional<String> recur} into an {@code Optional<Recur>} if {@code recur} is present.
@@ -182,8 +179,11 @@ public class SelectCommand extends Command {
         return recur.isPresent() ? Optional.of(new Recur(recur.get())) : Optional.empty();
     }
 ```
-###### /java/seedu/ezdo/model/EzDo.java
+###### \java\seedu\ezdo\model\EzDo.java
 ``` java
+    /**
+     * Toggles the tasks select status in {@code p}.
+     */
     public void toggleTasksSelect(ArrayList<Task> p) {
         for (int i = 0; i < p.size(); i++) {
             Task task = p.get(i);
@@ -191,15 +191,27 @@ public class SelectCommand extends Command {
         }
     }
 
+    /**
+     * Removes recurring status of the completed task.
+     * Set the completed task as done.
+     */
     private void moveCurrentTaskToDone(Task task) {
+        String optionalRecur = "";
         try {
-            task.setRecur(new Recur(""));
+            task.setRecur(new Recur(optionalRecur));
         } catch (IllegalValueException e) {
             e.printStackTrace();
         }
         task.toggleDone();
     }
 
+    /**
+     * Updates the start and due dates according to the recurring status.
+     * Do nothing if there is no recurring status.
+     * @param task    Task to have its start and due dates updated.
+     * @throws IllegalValueException    The date is optional and cannot be parsed
+     *                                  as Date object.
+     */
     private void updateRecurringDates(Task task) {
 
         if (task.getRecur().isRecur()) {
@@ -207,135 +219,69 @@ public class SelectCommand extends Command {
                 String recurIntervalInString = task.getRecur().toString().trim();
                 int recurringInterval = Recur.RECUR_INTERVALS.get(recurIntervalInString);
 
+                // Update start date
                 String startDateInString = task.getStartDate().value;
-                String dueDateInString = task.getDueDate().value;
-
                 String startDate = updateDate(recurringInterval, startDateInString);
+                
+                // Update due date
+                String dueDateInString = task.getDueDate().value;
                 String dueDate = updateDate(recurringInterval, dueDateInString);
-
+                
+                // Add updated task to UniqueTaskList.
                 tasks.add(new Task(task.getName(), task.getPriority(), new StartDate(startDate),
                         new DueDate(dueDate), task.getRecur(), task.getTags()));
 
             } catch (IllegalValueException ive) {
-                // Do nothing as the date is optional
-                // and cannot be parsed as Date object
                 ive.printStackTrace();
             }
         }
     }
 
+    /**
+     * Updates a given date according to the recurring status (type).
+     * Do nothing if there is no recurring status.
+     * @param type              The recurring status.
+     * @param originalDate      The date to be updated.
+     * @throws ParseException   The date is optional and cannot be parsed as Date object.
+     */
     private String updateDate(int type, String originalDate) {
         try {
             int recurIntervalIncrement = 1;
+
+            // get current date and time.
             Calendar c = Calendar.getInstance();
+
+            // set given date and time.
             c.setTime(DateParser.USER_OUTPUT_DATE_FORMAT.parse(originalDate));
+
+            // update date according to recurring status.
             c.add(type, recurIntervalIncrement);
-            return DateParser.USER_OUTPUT_DATE_FORMAT.format(c.getTime());
+
+            // Format the date according to user's input.
+            String updatedDate = DateParser.USER_OUTPUT_DATE_FORMAT.format(c.getTime());
+
+            return updatedDate;
+
         } catch (ParseException pe) {
-            // Do nothing as the date is optional
-            // and cannot be parsed as Date object
             pe.printStackTrace();
         }
         return originalDate;
     }
 ```
-###### /java/seedu/ezdo/model/ModelManager.java
+###### \java\seedu\ezdo\model\ModelManager.java
 ``` java
     @Override
     public boolean toggleTasksSelect(ArrayList<Task> tasksToToggle) {
+        int firstElement = 0;
         ezDo.toggleTasksSelect(tasksToToggle);
-        final boolean isSetToSelect = tasksToToggle.get(0).getStarted();
+        final boolean isSetToSelect = tasksToToggle.get(firstElement).getStarted();
         updateFilteredListToShowAll();
         ezDo.sortTasks(currentSortCriteria, currentIsSortedAscending);
         indicateEzDoChanged();
         return isSetToSelect;
     }
 ```
-###### /java/seedu/ezdo/model/ModelManager.java
-``` java
-
-    /**
-     * Updates an existing task in ezDo.
-     *
-     * @throws DuplicateTaskException
-     *             if the edited task is a duplicate
-     * @throws DateException
-     *             if the dates are invalid(start date after due date)
-     */
-    @Override
-    public void updateTask(int filteredTaskListIndex, ReadOnlyTask editedTask)
-            throws UniqueTaskList.DuplicateTaskException, DateException, RecurException {
-        assert editedTask != null;
-        checkTaskDate(editedTask);
-        checkRecur(editedTask);
-        updateStacks();
-        int ezDoIndex = filteredTasks.getSourceIndex(filteredTaskListIndex);
-        ezDo.updateTask(ezDoIndex, editedTask);
-        ezDo.sortTasks(currentSortCriteria, currentIsSortedAscending);
-        indicateEzDoChanged();
-    }
-
-    /**
-     * Undo ezDo to the previous state.
-     *
-     * @throws EmptyStackException
-     *             if there is no command to undo.
-     */
-    @Override
-    public void undo() throws EmptyStackException {
-        ReadOnlyEzDo currentState = new EzDo(this.getEzDo());
-        ezDo.resetData(undoStack.pop());
-        redoStack.push(currentState);
-        updateFilteredListToShowAll();
-        indicateEzDoChanged();
-    }
-
-    /**
-     * Redo ezDo to the previous state.
-     *
-     * @throws EmptyStackException
-     *             if there is no undone command to redo
-     */
-    @Override
-    public void redo() throws EmptyStackException {
-        ReadOnlyEzDo currentState = new EzDo(this.getEzDo());
-        ezDo.resetData(redoStack.pop());
-        undoStack.push(currentState);
-        updateFilteredListToShowAll();
-        indicateEzDoChanged();
-    }
-
-    /**
-     * Update the undo/redo stacks.
-     */
-    @Override
-    public void updateStacks() {
-        ReadOnlyEzDo prevState = new EzDo(this.getEzDo());
-        undoStack.push(prevState);
-        redoStack.clear();
-    }
-
-    /**
-     * Checks if a task's dates are valid.
-     *
-     * @throws DateException
-     *             if the start date is after the due date
-     */
-    @Override
-    public void checkTaskDate(ReadOnlyTask task) throws DateException {
-        assert task != null;
-        try {
-            if (!DateUtil.isTaskDateValid(task)) {
-                throw new DateException("Start date after due date!");
-            }
-        } catch (ParseException pe) {
-            logger.info("Parse exception while checking if task date valid");
-            throw new DateException("Error parsing dates!");
-        }
-    }
-
-```
-###### /java/seedu/ezdo/model/ModelManager.java
+###### \java\seedu\ezdo\model\ModelManager.java
 ``` java
     /**
      * Throws a RecurException if a floating task is found with a recurring status.
@@ -351,7 +297,7 @@ public class SelectCommand extends Command {
     }
 }
 ```
-###### /java/seedu/ezdo/model/todo/DueDate.java
+###### \java\seedu\ezdo\model\todo\DueDate.java
 ``` java
 /**
  * Represents the due date of a task.
@@ -364,7 +310,7 @@ public class DueDate extends TaskDate {
 
     /**
      * Validates given due date.
-     *
+     * @param dueDate   The due date of a task.
      * @throws IllegalValueException if given due date string is invalid.
      */
     public DueDate(String dueDate) throws IllegalValueException {
@@ -375,7 +321,7 @@ public class DueDate extends TaskDate {
     }
 
 ```
-###### /java/seedu/ezdo/model/todo/Recur.java
+###### \java\seedu\ezdo\model\todo\Recur.java
 ``` java
 /**
  * Represents a Task's recurring interval in ezDo. Guarantees: immutable; is
@@ -385,6 +331,7 @@ public class Recur {
 
     public static final String MESSAGE_RECUR_CONSTRAINTS =
             "Recurring time interval should be 'daily', 'weekly', 'monthly' or 'yearly'.";
+
     public static final String INTERVAL_NONE = "";
 
     public static final HashMap<String, Integer> RECUR_INTERVALS = new HashMap<>();
@@ -392,21 +339,34 @@ public class Recur {
     public final String value;
 
     /**
-     * Validates given recurring time interval.
-     *
+     * Adds a recurring time interval.
+     * @param recur  The recur interval.
      * @throws IllegalValueException
      *             if given recurring time interval string is invalid.
      */
     public Recur(String recur) throws IllegalValueException {
-        initialiseRecurIntervals();
         assert recur != null;
+        initialiseRecurIntervals();  // initialises HashMap with respective intervals
         String trimmedRecur = recur.trim();
-        if (!isValidRecur(trimmedRecur)) {
-            throw new IllegalValueException(MESSAGE_RECUR_CONSTRAINTS);
-        }
+        checkIsValidRecur(trimmedRecur);
         this.value = trimmedRecur;
     }
 
+    /**
+     * Validates given recurring time interval.
+     * @param recur     The recur interval.
+     * @throws IllegalValueException
+     *             if given recurring time interval string is invalid.
+     */
+    private void checkIsValidRecur(String recur) throws IllegalValueException {
+        if (!isValidRecur(recur)) {
+            throw new IllegalValueException(MESSAGE_RECUR_CONSTRAINTS);
+        }
+    }
+
+    /**
+     * Initialises recur intervals in RECUR_INTERVALS HashMap.
+     */
     private void initialiseRecurIntervals() {
 
         String intervalDaily = "daily";
@@ -428,6 +388,9 @@ public class Recur {
         return RECUR_INTERVALS.containsKey(test);
     }
 
+    /**
+     * Checks if a recurring interval is attached in a task.
+     */
     public boolean isRecur() {
         return !value.equals(INTERVAL_NONE);
     }
@@ -451,9 +414,13 @@ public class Recur {
 
 }
 ```
-###### /java/seedu/ezdo/model/util/SampleDataUtil.java
+###### \java\seedu\ezdo\model\util\SampleDataUtil.java
 ``` java
 public class SampleDataUtil {
+
+    private static final String MESSAGE_DUPLICATE_TASKS = "Sample data cannot contain duplicate tasks";
+    private static final String MESSAGE_INVALID_SAMPLE_DATA = "Sample data cannot be invalid";
+
     public static Task[] getSampleTasks() {
         try {
             return new Task[] {
@@ -494,51 +461,60 @@ public class SampleDataUtil {
                     new UniqueTagList("school", "exams"))
             };
         } catch (IllegalValueException e) {
-            throw new AssertionError("Sample data cannot be invalid", e);
+            throw new AssertionError(MESSAGE_INVALID_SAMPLE_DATA, e);
         }
     }
 
     public static ReadOnlyEzDo getSampleEzDo() {
         try {
             EzDo sampleEzDo = new EzDo();
-            for (Task sampleTask : getSampleTasks()) {
-                sampleEzDo.addTask(sampleTask);
-            }
+            addTasksInSampleEzDo(sampleEzDo);
             return sampleEzDo;
         } catch (DuplicateTaskException e) {
-            throw new AssertionError("Sample data cannot contain duplicate tasks", e);
+            throw new AssertionError(MESSAGE_DUPLICATE_TASKS, e);
         }
     }
+
+    private static void addTasksInSampleEzDo(EzDo sampleEzDo) throws DuplicateTaskException {
+        for (Task sampleTask : getSampleTasks()) {
+            sampleEzDo.addTask(sampleTask);
+        }
+    }
+}
 ```
-###### /java/seedu/ezdo/ui/CommandBox.java
+###### \java\seedu\ezdo\ui\CommandBox.java
 ``` java
     @FXML
-    private void handleCommandInputChanged() {
+    public void handleCommandInputChanged() {
         // reset command text field color if it is changed.
-        commandTextField.textProperty().addListener((observable, oldValue, newValue) -> {
-            commandTextField.getStyleClass().remove(ERROR_STYLE_CLASS);
-            commandTextField.getStyleClass().remove(SUCCESS_STYLE_CLASS);
-        });
+        resetCommandFieldListener();
 
         try {
             CommandResult commandResult = logic.execute(commandTextField.getText());
 
             // process result of the command
-            commandTextField.setText("");
+            commandTextField.setText(TEXT_NO_COMMAND_INPUT);
             setStyleToIndicateCommandSuccess();
-            logger.info("Result: " + commandResult.feedbackToUser);
+            logger.info(MESSAGE_RESULT + commandResult.feedbackToUser);
             raise(new NewResultAvailableEvent(commandResult.feedbackToUser));
 
         } catch (CommandException e) {
             // handle command failure
             setStyleToIndicateCommandFailure();
-            logger.info("Invalid command: " + commandTextField.getText());
+            logger.info(MESSAGE_INVALID_COMMAND + commandTextField.getText());
             raise(new NewResultAvailableEvent(e.getMessage()));
         }
     }
-```
-###### /java/seedu/ezdo/ui/CommandBox.java
-``` java
+
+    /**
+     * Add command field listener to reset command text field color if it is changed.
+     */
+    private void resetCommandFieldListener() {
+        commandTextField.textProperty().addListener((observable, oldValue, newValue) -> {
+            commandTextField.getStyleClass().remove(ERROR_STYLE_CLASS);
+            commandTextField.getStyleClass().remove(SUCCESS_STYLE_CLASS);
+        });
+    }
 
     /**
      * Sets the command box style to indicate a successful command.
@@ -553,18 +529,17 @@ public class SampleDataUtil {
     private void setStyleToIndicateCommandFailure() {
         commandTextField.getStyleClass().add(ERROR_STYLE_CLASS);
     }
-
-}
 ```
-###### /java/seedu/ezdo/ui/TaskCard.java
+###### \java\seedu\ezdo\ui\TaskCard.java
 ``` java
+/**
+ * The task card for the UI.
+ */
 public class TaskCard extends UiPart<Region> {
 
+    private static final String NUMBERING_FORMAT = ". ";
     private static final String HAS_COMPLETED_LINK = "/images/tick.png";
-
     private static final String HAS_STARTED_LINK = "/images/wip.png";
-
-    private String priorityInString;
 
     private static final String DEFAULT_PRIORITY_NUMBER = "";
     private static final String DEFAULT_PRIORITY_COLOR = "transparent";
@@ -594,6 +569,9 @@ public class TaskCard extends UiPart<Region> {
 
     public static final HashMap<String, String> PRIORITY_COLOR_HASHMAP = new HashMap<>();
 
+    private String priorityInString;
+
+
     @FXML
     private HBox cardPane;
     @FXML
@@ -615,11 +593,16 @@ public class TaskCard extends UiPart<Region> {
     @FXML
     private FlowPane tags;
 
+    /**
+     * Creates a TaskCard object with all fields to be shown in UI.
+     * @param task              The task to be updated.
+     * @param displayedIndex    The index of the task.
+     */
     public TaskCard(ReadOnlyTask task, int displayedIndex) {
         super(FXML);
         setPriorityColorHashMap();
         name.setText(task.getName().fullName);
-        id.setText(displayedIndex + ". ");
+        id.setText(displayedIndex + NUMBERING_FORMAT);
         setPriority(task);
         setStatus(task);
         setStartDate(task);
@@ -631,35 +614,61 @@ public class TaskCard extends UiPart<Region> {
 
     // ========================= STARTDATE ============================ //
 
+    /**
+     * Sets the text of start date.
+     * Sets the color of start date when the date has commenced.
+     * @param task      The task to be updated.
+     */
     private void setStartDate(ReadOnlyTask task) {
-        Date currentDate = new Date();
+        Date currentDate = new Date();  // current date and time
         startDate.setText(task.getStartDate().value);
         setStartDateColor(currentDate, CSS_STARTDATE_PAST_CURRENT_DATE_COLOR);
     }
 
+    /**
+     * Sets the color of the start date when it has commenced.
+     * @param dateReference     The date to be referenced.
+     * @param cssColor          The CSS formatting to be used.
+     * @throws ParseException   If the start date is optional and cannot be parsed
+     *                          as Date object.
+     */
     private void setStartDateColor(Date dateReference, String cssColor) {
-
         try {
             if (dateReference.after(DATE_FORMAT.parse(startDate.getText()))) {
                 startDate.setStyle(cssColor);
             }
         } catch (ParseException pe) {
-            // Do nothing as the start date is optional
-            // and cannot be parsed as Date object
+            pe.printStackTrace();
         }
     }
 
     // ========================= DUEDATE ============================ //
 
+    /**
+     * Sets the text of the due date.
+     * Sets the color of due date when it is overdue and when it's due in 7 days time.
+     * @param task              The task to be updated.
+     * @throws ParseException   If the due date is optional and cannot be parsed
+     *                          as Date object.
+     */
     private void setDueDate(ReadOnlyTask task) {
         Date currentDate = new Date();
         Date dateSevenDaysInAdvance = createDateSevenDaysInAdvance();
 
         dueDate.setText(task.getDueDate().value);
+
         setAboutToDueDateColor(dateSevenDaysInAdvance, CSS_ABOUT_TO_DUE_COLOR);
         setDueDateColor(currentDate, CSS_OVERDUE_COLOR);
     }
 
+    /**
+     * Removes the color of the start date when it's due in 7 days time.
+     * Sets the color of the due date when it's due in 7 days time.
+     * @param dateReference     The date to be referenced.
+     * @param cssColor          The CSS formatting to be used.
+     * @throws ParseException   If the due date is optional and cannot be parsed
+     *                          as Date object.
+     */
     private void setAboutToDueDateColor(Date dateReference, String cssColor) {
         try {
             if (dateReference.after(DATE_FORMAT.parse(dueDate.getText()))) {
@@ -667,11 +676,18 @@ public class TaskCard extends UiPart<Region> {
                 dueDate.setStyle(cssColor);
             }
         } catch (ParseException pe) {
-            // Do nothing as the due date is optional
-            // and cannot be parsed as Date object
+            pe.printStackTrace();
         }
     }
 
+    /**
+     * Sets the color of the start date when the due date is overdue.
+     * Sets the color of the due date when the due date is overdue.
+     * @param dateReference     The date to be referenced.
+     * @param cssColor          The CSS formatting to be used.
+     * @throws ParseException   If the due date is optional and cannot be parsed
+     *                          as Date object.
+     */
     private void setDueDateColor(Date dateReference, String cssColor) {
         try {
             if (dateReference.after(DATE_FORMAT.parse(dueDate.getText()))) {
@@ -679,24 +695,27 @@ public class TaskCard extends UiPart<Region> {
                 dueDate.setStyle(cssColor);
             }
         } catch (ParseException pe) {
-            // Do nothing as the due date is optional
-            // and cannot be parsed as Date object
+            pe.printStackTrace();
         }
     }
 
+    /** Returns the date seven days in advance of the current date and time. */
     private Date createDateSevenDaysInAdvance() {
         int weekIncrement = 7;
-        Calendar cal = Calendar.getInstance();
-        cal.add(Calendar.DATE, weekIncrement);
+        Calendar cal = Calendar.getInstance();  // get current date and time
+        cal.add(Calendar.DATE, weekIncrement);  // update to seven days ago
         return cal.getTime();
     }
 
     // ========================= PRIORITY ============================ //
 
-    private void setPriorityInString(String priorityInString) {
-        this.priorityInString = priorityInString;
+    /** Sets priorityInString as a local variable. **/
+    private void setPriorityInString(ReadOnlyTask task) {
+        String priorityValue = task.getPriority().value;
+        this.priorityInString = priorityValue;
     }
 
+    /** Initialises the colors and priority numbers in PRIORITY_COLOR_HASHMAP. **/
     private void setPriorityColorHashMap() {
         PRIORITY_COLOR_HASHMAP.put(DEFAULT_PRIORITY_NUMBER, DEFAULT_PRIORITY_COLOR);
         PRIORITY_COLOR_HASHMAP.put(LOW_PRIORITY_NUMBER, LOW_PRIORITY_COLOR);
@@ -704,14 +723,21 @@ public class TaskCard extends UiPart<Region> {
         PRIORITY_COLOR_HASHMAP.put(HIGH_PRIORITY_NUMBER, HIGH_PRIORITY_COLOR);
     }
 
+    /**
+     * Sets the priority text and color.
+     * @param task      The task to be updated.
+     */
     private void setPriority(ReadOnlyTask task) {
-        setPriorityInString(task.getPriority().value);
-        priority.setText(priorityInString); // Invisible in UI (for testing
-                                            // purposes)
+        setPriorityInString(task);
+        priority.setText(priorityInString); // Invisible in UI (for testing purposes)
         priorityColor.setStyle(CSS_BACKGROUND_COLOR_PROPERTY + PRIORITY_COLOR_HASHMAP.get(priorityInString));
     }
 
     // ========================= STATUS ============================ //
+    /**
+     * Sets the image if a task has selected or if the task has completed.
+     * @param task      The task to be updated.
+     */
     private void setStatus(ReadOnlyTask task) {
         if (task.getStarted()) {
             status.setGraphic(new ImageView(HAS_STARTED_LINK));
@@ -722,17 +748,24 @@ public class TaskCard extends UiPart<Region> {
     }
 
     // ========================= TAGS ============================ //
+    /**
+     * Sets the tags given a task.
+     * @param task      The task to be updated.
+     */
     private void initTags(ReadOnlyTask task) {
         task.getTags().forEach(tag -> tags.getChildren().add(new Label(tag.tagName)));
     }
 }
 ```
-###### /java/seedu/ezdo/ui/TaskCard.java
+###### \java\seedu\ezdo\ui\TaskCard.java
 ``` java
 
 ```
-###### /java/seedu/ezdo/ui/TaskCardHeader.java
+###### \java\seedu\ezdo\ui\TaskCardHeader.java
 ``` java
+/**
+ * The task card header for the UI.
+ */
 public class TaskCardHeader extends UiPart<Region> {
 
     private static final String FXML = "TaskCardHeader.fxml";
@@ -749,11 +782,11 @@ public class TaskCardHeader extends UiPart<Region> {
 
 }
 ```
-###### /java/seedu/ezdo/ui/TaskCardHeader.java
+###### \java\seedu\ezdo\ui\TaskCardHeader.java
 ``` java
 
 ```
-###### /resources/view/DarkTheme.css
+###### \resources\view\DarkTheme.css
 ``` css
 
 .background {
@@ -972,7 +1005,7 @@ public class TaskCardHeader extends UiPart<Region> {
     -fx-font-size: 16px;
 }
 ```
-###### /resources/view/Extensions.css
+###### \resources\view\Extensions.css
 ``` css
 .error {
     -fx-background-color: pink;
@@ -994,7 +1027,7 @@ public class TaskCardHeader extends UiPart<Region> {
     -fx-text-fill: white;
 }
 ```
-###### /resources/view/MainWindow.fxml
+###### \resources\view\MainWindow.fxml
 ``` fxml
 
 <?import java.net.URL?>
@@ -1067,7 +1100,7 @@ public class TaskCardHeader extends UiPart<Region> {
    </padding>
 </VBox>
 ```
-###### /resources/view/TaskCardHeader.fxml
+###### \resources\view\TaskCardHeader.fxml
 ``` fxml
 
 <?import javafx.geometry.Insets?>
@@ -1133,7 +1166,7 @@ public class TaskCardHeader extends UiPart<Region> {
    </opaqueInsets>
 </HBox>
 ```
-###### /resources/view/TaskListCard.fxml
+###### \resources\view\TaskListCard.fxml
 ``` fxml
 
 <?import java.net.URL?>
@@ -1224,7 +1257,7 @@ public class TaskCardHeader extends UiPart<Region> {
    </opaqueInsets>
 </HBox>
 ```
-###### /resources/view/TaskListPanel.fxml
+###### \resources\view\TaskListPanel.fxml
 ``` fxml
 
 <?import java.net.URL?>
