--- a/collated/main/A0141010L.md
+++ b/collated/main/A0141010L.md
@@ -1,10 +1,10 @@
 # A0141010L
-###### /java/seedu/ezdo/commons/core/Messages.java
+###### \java\seedu\ezdo\commons\core\Messages.java
 ``` java
     public static final String MESSAGE_WRONG_LIST = "Please return to the task list "
                                                   + "if you want to mark a task as done.";
 ```
-###### /java/seedu/ezdo/commons/util/SearchParameters.java
+###### \java\seedu\ezdo\commons\util\SearchParameters.java
 ``` java
 public class SearchParameters {
 
@@ -140,7 +140,7 @@ public class SearchParameters {
     }
 }
 ```
-###### /java/seedu/ezdo/logic/commands/DoneCommand.java
+###### \java\seedu\ezdo\logic\commands\DoneCommand.java
 ``` java
 /**
  * Marks a task as identified using its last displayed index from ezDo as done
@@ -175,7 +175,7 @@ public class DoneCommand extends Command {
         this.tasksToToggle = null;
     }
 ```
-###### /java/seedu/ezdo/logic/commands/FindCommand.java
+###### \java\seedu\ezdo\logic\commands\FindCommand.java
 ``` java
 /**
  * Finds and lists all tasks in ezDo whose name contains any of the argument
@@ -205,7 +205,7 @@ public class FindCommand extends Command {
 
 }
 ```
-###### /java/seedu/ezdo/logic/parser/DoneCommandParser.java
+###### \java\seedu\ezdo\logic\parser\DoneCommandParser.java
 ``` java
 
 /**
@@ -234,7 +234,7 @@ public class DoneCommandParser {
 
 }
 ```
-###### /java/seedu/ezdo/logic/parser/FindCommandParser.java
+###### \java\seedu\ezdo\logic\parser\FindCommandParser.java
 ``` java
 /**
  * Parses input arguments and creates a new FindCommand object
@@ -427,28 +427,30 @@ public class FindCommandParser implements CommandParser {
 
     private Optional<String> setOptionalStartDate(Optional<String> optionalStartDate) {
 
+        Optional<String> optionalSetDate = optionalStartDate;
         if (isFindBefore(optionalStartDate)) {
-            optionalStartDate = parseFindBefore(optionalStartDate);
+            optionalSetDate = parseFindBefore(optionalStartDate);
         }
 
         if (isFindAfter(optionalStartDate)) {
-            optionalStartDate = parseFindAfter(optionalStartDate);
+            optionalSetDate = parseFindAfter(optionalStartDate);
         }
 
-        return optionalStartDate;
+        return optionalSetDate;
     }
 
     private Optional<String> setOptionalDueDate(Optional<String> optionalDueDate) {
 
+        Optional<String> optionalSetDate = optionalDueDate;
         if (isFindBefore(optionalDueDate)) {
-            optionalDueDate = parseFindBefore(optionalDueDate);
+            optionalSetDate = parseFindBefore(optionalDueDate);
         }
 
         if (isFindAfter(optionalDueDate)) {
-            optionalDueDate = parseFindAfter(optionalDueDate);
+            optionalSetDate = parseFindAfter(optionalDueDate);
         }
 
-        return optionalDueDate;
+        return optionalSetDate;
     }
 
     /**
@@ -462,7 +464,7 @@ public class FindCommandParser implements CommandParser {
     }
 }
 ```
-###### /java/seedu/ezdo/logic/parser/ParserUtil.java
+###### \java\seedu\ezdo\logic\parser\ParserUtil.java
 ``` java
     /**
      * Parses a {@code Optional<String> name} into an {@code Optional<Name>} if {@code name} is present.
@@ -511,7 +513,7 @@ public class FindCommandParser implements CommandParser {
         return dueDate.isPresent() ? Optional.of(new DueDate(dueDate.get(), isFind)) : Optional.empty();
     }
 ```
-###### /java/seedu/ezdo/model/ModelManager.java
+###### \java\seedu\ezdo\model\ModelManager.java
 ``` java
     private void updateFilteredTaskList(Expression expression) {
         filteredTasks.setPredicate(expression::satisfies);
@@ -836,7 +838,7 @@ public class FindCommandParser implements CommandParser {
     }
 
 ```
-###### /java/seedu/ezdo/model/todo/DueDate.java
+###### \java\seedu\ezdo\model\todo\DueDate.java
 ``` java
     /**
      * Validates given due date when user finds by date.
@@ -851,7 +853,7 @@ public class FindCommandParser implements CommandParser {
     }
 }
 ```
-###### /java/seedu/ezdo/model/todo/Priority.java
+###### \java\seedu\ezdo\model\todo\Priority.java
 ``` java
 /**
  * Represents a Task's priority in the ezDo.
@@ -904,7 +906,7 @@ public class Priority {
 
 }
 ```
-###### /java/seedu/ezdo/model/todo/StartDate.java
+###### \java\seedu\ezdo\model\todo\StartDate.java
 ``` java
     /**
      * Validates given start date when user finds by start date
@@ -920,7 +922,7 @@ public class Priority {
 
 }
 ```
-###### /java/seedu/ezdo/model/todo/TaskDate.java
+###### \java\seedu\ezdo\model\todo\TaskDate.java
 ``` java
     public TaskDate(String taskDate, boolean isFind) throws IllegalValueException {
         String trimmedDate = taskDate.trim();
@@ -929,7 +931,7 @@ public class Priority {
         this.value = dateParser.value;
     }
 ```
-###### /java/seedu/ezdo/model/todo/TaskDate.java
+###### \java\seedu\ezdo\model\todo\TaskDate.java
 ``` java
     @Override
     public String toString() {
