--- a/collated/test/A0139248X.md
+++ b/collated/test/A0139248X.md
@@ -1,5 +1,5 @@
 # A0139248X
-###### /java/guitests/KillCommandTest.java
+###### \java\guitests\KillCommandTest.java
 ``` java
 public class KillCommandTest extends EzDoGuiTest {
 
@@ -68,7 +68,7 @@ public class KillCommandTest extends EzDoGuiTest {
     }
 }
 ```
-###### /java/guitests/RedoCommandTest.java
+###### \java\guitests\RedoCommandTest.java
 ``` java
 public class RedoCommandTest extends EzDoGuiTest {
     @Test
@@ -113,7 +113,7 @@ public class RedoCommandTest extends EzDoGuiTest {
     }
 }
 ```
-###### /java/guitests/SampleDataTest.java
+###### \java\guitests\SampleDataTest.java
 ``` java
 public class SampleDataTest extends EzDoGuiTest {
     @Override
@@ -135,7 +135,7 @@ public class SampleDataTest extends EzDoGuiTest {
     }
 }
 ```
-###### /java/guitests/SaveCommandTest.java
+###### \java\guitests\SaveCommandTest.java
 ``` java
 @RunWith(JMockit.class)
 public class SaveCommandTest extends EzDoGuiTest {
@@ -175,7 +175,7 @@ public class SaveCommandTest extends EzDoGuiTest {
     }
 }
 ```
-###### /java/guitests/SortCommandTest.java
+###### \java\guitests\SortCommandTest.java
 ``` java
     @Test
     public void sort_invalidOrder() {
@@ -184,7 +184,7 @@ public class SaveCommandTest extends EzDoGuiTest {
     }
 }
 ```
-###### /java/guitests/UndoCommandTest.java
+###### \java\guitests\UndoCommandTest.java
 ``` java
 public class UndoCommandTest extends EzDoGuiTest {
 
@@ -238,7 +238,7 @@ public class UndoCommandTest extends EzDoGuiTest {
     }
 }
 ```
-###### /java/guitests/UndoneCommandTest.java
+###### \java\guitests\UndoneCommandTest.java
 ``` java
 /** tests the toggling of done tasks to undone */
 public class UndoneCommandTest extends EzDoGuiTest {
@@ -294,7 +294,7 @@ public class UndoneCommandTest extends EzDoGuiTest {
     }
 }
 ```
-###### /java/seedu/ezdo/commons/core/ConfigTest.java
+###### \java\seedu\ezdo\commons\core\ConfigTest.java
 ``` java
 public class ConfigTest {
     @Rule
@@ -311,7 +311,7 @@ public class ConfigTest {
         assertEquals(defaultConfigAsString, new Config().toString());
     }
 ```
-###### /java/seedu/ezdo/commons/core/ConfigTest.java
+###### \java\seedu\ezdo\commons\core\ConfigTest.java
 ``` java
     @Test
     public void getEzDoNameMethod() {
@@ -321,7 +321,7 @@ public class ConfigTest {
     }
 }
 ```
-###### /java/seedu/ezdo/commons/core/VersionTest.java
+###### \java\seedu\ezdo\commons\core\VersionTest.java
 ``` java
     @Test
     public void equalsMethod_null() {
@@ -341,7 +341,7 @@ public class ConfigTest {
     }
 }
 ```
-###### /java/seedu/ezdo/commons/EventsTest.java
+###### \java\seedu\ezdo\commons\EventsTest.java
 ``` java
 public class EventsTest {
 
@@ -355,7 +355,7 @@ public class EventsTest {
     }
 }
 ```
-###### /java/seedu/ezdo/commons/util/DateUtilTest.java
+###### \java\seedu\ezdo\commons\util\DateUtilTest.java
 ``` java
 @RunWith(JMockit.class)
 public class DateUtilTest {
@@ -402,7 +402,7 @@ public class DateUtilTest {
     }
 
 ```
-###### /java/seedu/ezdo/commons/util/DateUtilTest.java
+###### \java\seedu\ezdo\commons\util\DateUtilTest.java
 ``` java
     @Test
     public void isTaskDateValid_twoDatesEqual_pass() throws Exception {
@@ -421,7 +421,7 @@ public class DateUtilTest {
     }
 }
 ```
-###### /java/seedu/ezdo/commons/util/FileUtilTest.java
+###### \java\seedu\ezdo\commons\util\FileUtilTest.java
 ``` java
 public class FileUtilTest {
 
@@ -460,7 +460,7 @@ public class FileUtilTest {
     }
 }
 ```
-###### /java/seedu/ezdo/logic/LogicManagerTest.java
+###### \java\seedu\ezdo\logic\LogicManagerTest.java
 ``` java
     @Test
     public void execute_killInvalidArgsFormat_errorMessageShown() throws Exception {
@@ -490,7 +490,7 @@ public class FileUtilTest {
                 expectedEZ.getTaskList());
     }
 ```
-###### /java/seedu/ezdo/logic/LogicManagerTest.java
+###### \java\seedu\ezdo\logic\LogicManagerTest.java
 ``` java
     @Test
     public void execute_save_successful() {
@@ -500,7 +500,7 @@ public class FileUtilTest {
                 directory + SaveCommand.DATA_FILE_NAME), new EzDo(), Collections.emptyList());
     }
 ```
-###### /java/seedu/ezdo/logic/parser/ArgumentTokenizerTest.java
+###### \java\seedu\ezdo\logic\parser\ArgumentTokenizerTest.java
 ``` java
     @Test
     public void equalsMethod() {
@@ -520,7 +520,7 @@ public class FileUtilTest {
     }
 }
 ```
-###### /java/seedu/ezdo/logic/parser/ParserUtilTest.java
+###### \java\seedu\ezdo\logic\parser\ParserUtilTest.java
 ``` java
 public class ParserUtilTest {
 
@@ -531,7 +531,7 @@ public class ParserUtilTest {
 
 }
 ```
-###### /java/seedu/ezdo/model/FixedStackTest.java
+###### \java\seedu\ezdo\model\FixedStackTest.java
 ``` java
 public class FixedStackTest {
     @Rule
@@ -592,7 +592,7 @@ public class FixedStackTest {
     }
 }
 ```
-###### /java/seedu/ezdo/model/SampleDataUtilTest.java
+###### \java\seedu\ezdo\model\SampleDataUtilTest.java
 ``` java
 @RunWith(JMockit.class)
 public class SampleDataUtilTest {
@@ -623,7 +623,7 @@ public class SampleDataUtilTest {
     }
 }
 ```
-###### /java/seedu/ezdo/model/task/DueDateTest.java
+###### \java\seedu\ezdo\model\task\DueDateTest.java
 ``` java
 public class DueDateTest {
 
@@ -654,7 +654,7 @@ public class DueDateTest {
 }
 
 ```
-###### /java/seedu/ezdo/model/task/ModelManagerTest.java
+###### \java\seedu\ezdo\model\task\ModelManagerTest.java
 ``` java
 @RunWith(PowerMockRunner.class)
 @PrepareForTest(DateUtil.class)
@@ -680,7 +680,7 @@ public class ModelManagerTest {
         modelManager.checkTaskDate(task);
     }
 ```
-###### /java/seedu/ezdo/model/task/RecurTest.java
+###### \java\seedu\ezdo\model\task\RecurTest.java
 ``` java
 @RunWith(JMockit.class)
 public class RecurTest {
@@ -688,7 +688,7 @@ public class RecurTest {
     @Rule
     public ExpectedException thrown = ExpectedException.none();
 ```
-###### /java/seedu/ezdo/model/task/RecurTest.java
+###### \java\seedu\ezdo\model\task\RecurTest.java
 ``` java
     @Test
     public void constructor_isValidRecurFalse_throwsIVE() throws IllegalValueException {
@@ -702,7 +702,7 @@ public class RecurTest {
     }
 }
 ```
-###### /java/seedu/ezdo/model/task/StartDateTest.java
+###### \java\seedu\ezdo\model\task\StartDateTest.java
 ``` java
     @Test
     public void invalidDate_IllegalValueException() throws Exception {
@@ -711,7 +711,7 @@ public class RecurTest {
     }
 }
 ```
-###### /java/seedu/ezdo/model/task/UniqueTagListTest.java
+###### \java\seedu\ezdo\model\task\UniqueTagListTest.java
 ``` java
 @RunWith(PowerMockRunner.class)
 @PrepareForTest({CollectionUtil.class})
@@ -737,7 +737,7 @@ public class UniqueTagListTest {
         new UniqueTagList(new Tag("omgwtfbbq"));
     }
 ```
-###### /java/seedu/ezdo/model/task/UniqueTaskListEnumTest.java
+###### \java\seedu\ezdo\model\task\UniqueTaskListEnumTest.java
 ``` java
 @RunWith(PowerMockRunner.class)
 public class UniqueTaskListEnumTest {
@@ -765,7 +765,7 @@ public class UniqueTaskListEnumTest {
     }
 }
 ```
-###### /java/seedu/ezdo/model/task/UniqueTaskListTest.java
+###### \java\seedu\ezdo\model\task\UniqueTaskListTest.java
 ``` java
 @RunWith(MockitoJUnitRunner.class)
 public class UniqueTaskListTest {
@@ -787,7 +787,7 @@ public class UniqueTaskListTest {
         utl.remove(task);
     }
 ```
-###### /java/seedu/ezdo/model/UnmodifiableObservableListTest.java
+###### \java\seedu\ezdo\model\UnmodifiableObservableListTest.java
 ``` java
     @Test
     public void contains_true() {
@@ -805,7 +805,7 @@ public class UniqueTaskListTest {
         assertTrue(0 == list.indexOf(10));
     }
 ```
-###### /java/seedu/ezdo/storage/StorageManagerTest.java
+###### \java\seedu\ezdo\storage\StorageManagerTest.java
 ``` java
     @Test
     public void handleEzDoDirectoryChangedEvent_exceptionThrown_eventRaised() throws IOException {
@@ -840,7 +840,7 @@ public class UniqueTaskListTest {
 
 }
 ```
-###### /java/seedu/ezdo/storage/XmlEzDoStorageTest.java
+###### \java\seedu\ezdo\storage\XmlEzDoStorageTest.java
 ``` java
     @Test
     public void saveEzDo_nullEzDo_assertionFailure() throws IOException {
@@ -891,7 +891,7 @@ public class UniqueTaskListTest {
     }
 }
 ```
-###### /java/seedu/ezdo/storage/XmlFileStorageTest.java
+###### \java\seedu\ezdo\storage\XmlFileStorageTest.java
 ``` java
 @RunWith(JMockit.class)
 public class XmlFileStorageTest {
