--- a/collated/test/A0141010L.md
+++ b/collated/test/A0141010L.md
@@ -1,5 +1,5 @@
 # A0141010L
-###### /java/guitests/DoneCommandTest.java
+###### \java\guitests\DoneCommandTest.java
 ``` java
 public class DoneCommandTest extends EzDoGuiTest {
 
@@ -134,8 +134,7 @@ public class DoneCommandTest extends EzDoGuiTest {
             c.add(type, increment);
             return DateParser.USER_OUTPUT_DATE_FORMAT.format(c.getTime());
         } catch (ParseException pe) {
-            // Do nothing as the date is optional
-            // and cannot be parsed as Date object
+            pe.printStackTrace();
         }
         return originalDate;
     }
@@ -155,13 +154,13 @@ public class DoneCommandTest extends EzDoGuiTest {
             taskToDone.setDueDate(new DueDate(newDueDate));
             taskToDone.setRecur(new Recur(""));
         } catch (IllegalValueException e) {
-
+            e.printStackTrace();
         }
         return taskToDone;
     }
 }
 ```
-###### /java/guitests/FindCommandTest.java
+###### \java\guitests\FindCommandTest.java
 ``` java
 public class FindCommandTest extends EzDoGuiTest {
 
@@ -207,7 +206,7 @@ public class FindCommandTest extends EzDoGuiTest {
     }
 
 ```
-###### /java/guitests/FindCommandTest.java
+###### \java\guitests\FindCommandTest.java
 ``` java
     @Test
     public void find_emptyList() {
