--- a/collated/test/A0139177W.md
+++ b/collated/test/A0139177W.md
@@ -1,5 +1,5 @@
 # A0139177W
-###### /java/guitests/CommandBoxTest.java
+###### \java\guitests\CommandBoxTest.java
 ``` java
 public class CommandBoxTest extends EzDoGuiTest {
 
@@ -53,7 +53,7 @@ public class CommandBoxTest extends EzDoGuiTest {
 
 }
 ```
-###### /java/guitests/EditCommandTest.java
+###### \java\guitests\EditCommandTest.java
 ``` java
     @Test
     public void edit_EmptyDatesWithRecur_failure() {
@@ -61,7 +61,7 @@ public class CommandBoxTest extends EzDoGuiTest {
         assertResultMessage(Messages.MESSAGE_RECUR_FAILURE);
     }
 ```
-###### /java/guitests/guihandles/TaskCardHandle.java
+###### \java\guitests\guihandles\TaskCardHandle.java
 ``` java
 /**
  * Provides a handle to a task card in the task list panel.
@@ -171,7 +171,7 @@ public class TaskCardHandle extends GuiHandle {
     }
 }
 ```
-###### /java/seedu/ezdo/model/task/RecurTest.java
+###### \java\seedu\ezdo\model\task\RecurTest.java
 ``` java
     @Test
     public void isValidRecur() {
@@ -218,7 +218,7 @@ public class TaskCardHandle extends GuiHandle {
     }
 
 ```
-###### /java/seedu/ezdo/testutil/TestUtil.java
+###### \java\seedu\ezdo\testutil\TestUtil.java
 ``` java
     private static Task[] getSampleTaskData() {
         try {
@@ -242,281 +242,14 @@ public class TaskCardHandle extends GuiHandle {
         }
     }
 ```
-###### /java/seedu/ezdo/testutil/TestUtil.java
-``` java
-
-    private static Tag[] getSampleTagData() {
-        try {
-            return new Tag[]{
-                new Tag("relatives"),
-                new Tag("friends")
-            };
-        } catch (IllegalValueException e) {
-            assert false;
-            return null;
-            //not possible
-        }
-    }
-
-    public static List<Task> generateSampleTaskData() {
-        return Arrays.asList(SAMPLE_TASK_DATA);
-    }
-
-    /**
-     * Appends the file name to the sandbox folder path.
-     * Creates the sandbox folder if it doesn't exist.
-     * @param fileName
-     * @return
-     */
-    public static String getFilePathInSandboxFolder(String fileName) {
-        try {
-            FileUtil.createDirs(new File(SANDBOX_FOLDER));
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
-        return SANDBOX_FOLDER + fileName;
-    }
-
-    public static void createDataFileWithSampleData(String filePath) {
-        createDataFileWithData(generateSampleStorageEzDo(), filePath);
-    }
-
-    public static <T> void createDataFileWithData(T data, String filePath) {
-        try {
-            File saveFileForTesting = new File(filePath);
-            FileUtil.createIfMissing(saveFileForTesting);
-            XmlUtil.saveDataToFile(saveFileForTesting, data);
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-    public static void main(String... s) {
-        createDataFileWithSampleData(TestApp.SAVE_LOCATION_FOR_TESTING);
-    }
-
-    public static XmlSerializableEzDo generateSampleStorageEzDo() {
-        return new XmlSerializableEzDo(new EzDo());
-    }
-
-    /**
-     * Tweaks the {@code keyCodeCombination} to resolve the {@code KeyCode.SHORTCUT} to their
-     * respective platform-specific keycodes
-     */
-    public static KeyCode[] scrub(KeyCodeCombination keyCodeCombination) {
-        List<KeyCode> keys = new ArrayList<>();
-        if (keyCodeCombination.getAlt() == KeyCombination.ModifierValue.DOWN) {
-            keys.add(KeyCode.ALT);
-        }
-        if (keyCodeCombination.getShift() == KeyCombination.ModifierValue.DOWN) {
-            keys.add(KeyCode.SHIFT);
-        }
-        if (keyCodeCombination.getMeta() == KeyCombination.ModifierValue.DOWN) {
-            keys.add(KeyCode.META);
-        }
-        if (keyCodeCombination.getControl() == KeyCombination.ModifierValue.DOWN) {
-            keys.add(KeyCode.CONTROL);
-        }
-        keys.add(keyCodeCombination.getCode());
-        return keys.toArray(new KeyCode[]{});
-    }
-
-    public static boolean isHeadlessEnvironment() {
-        String headlessProperty = System.getProperty("testfx.headless");
-        return headlessProperty != null && headlessProperty.equals("true");
-    }
-
-    public static void captureScreenShot(String fileName) {
-        File file = GuiTest.captureScreenshot();
-        try {
-            Files.copy(file, new File(fileName + ".png"));
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-    }
-
-    public static String descOnFail(Object... comparedObjects) {
-        return "Comparison failed \n"
-                + Arrays.asList(comparedObjects).stream()
-                .map(Object::toString)
-                .collect(Collectors.joining("\n"));
-    }
-
-    public static void setFinalStatic(Field field, Object newValue) throws NoSuchFieldException,
-                                                                           IllegalAccessException {
-        field.setAccessible(true);
-        // remove final modifier from field
-        Field modifiersField = Field.class.getDeclaredField("modifiers");
-        modifiersField.setAccessible(true);
-        // ~Modifier.FINAL is used to remove the final modifier from field so that its value is no longer
-        // final and can be changed
-        modifiersField.setInt(field, field.getModifiers() & ~Modifier.FINAL);
-        field.set(null, newValue);
-    }
-
-    public static void initRuntime() throws TimeoutException {
-        FxToolkit.registerPrimaryStage();
-        FxToolkit.hideStage();
-    }
-
-    public static void tearDownRuntime() throws Exception {
-        FxToolkit.cleanupStages();
-    }
-
-    /**
-     * Gets private method of a class
-     * Invoke the method using method.invoke(objectInstance, params...)
-     *
-     * Caveat: only find method declared in the current Class, not inherited from supertypes
-     */
-    public static Method getPrivateMethod(Class<?> objectClass, String methodName) throws NoSuchMethodException {
-        Method method = objectClass.getDeclaredMethod(methodName);
-        method.setAccessible(true);
-        return method;
-    }
-
-    public static void renameFile(File file, String newFileName) {
-        try {
-            Files.copy(file, new File(newFileName));
-        } catch (IOException e1) {
-            e1.printStackTrace();
-        }
-    }
-
-    /**
-     * Gets mid point of a node relative to the screen.
-     * @param node
-     * @return
-     */
-    public static Point2D getScreenMidPoint(Node node) {
-        double x = getScreenPos(node).getMinX() + node.getLayoutBounds().getWidth() / 2;
-        double y = getScreenPos(node).getMinY() + node.getLayoutBounds().getHeight() / 2;
-        return new Point2D(x, y);
-    }
-
-    /**
-     * Gets mid point of a node relative to its scene.
-     * @param node
-     * @return
-     */
-    public static Point2D getSceneMidPoint(Node node) {
-        double x = getScenePos(node).getMinX() + node.getLayoutBounds().getWidth() / 2;
-        double y = getScenePos(node).getMinY() + node.getLayoutBounds().getHeight() / 2;
-        return new Point2D(x, y);
-    }
-
-    /**
-     * Gets the bound of the node relative to the parent scene.
-     * @param node
-     * @return
-     */
-    public static Bounds getScenePos(Node node) {
-        return node.localToScene(node.getBoundsInLocal());
-    }
-
-    public static Bounds getScreenPos(Node node) {
-        return node.localToScreen(node.getBoundsInLocal());
-    }
-
-    public static double getSceneMaxX(Scene scene) {
-        return scene.getX() + scene.getWidth();
-    }
-
-    public static double getSceneMaxY(Scene scene) {
-        return scene.getX() + scene.getHeight();
-    }
-
-    public static Object getLastElement(List<?> list) {
-        return list.get(list.size() - 1);
-    }
-
-    /**
-     * Removes a subset from the list of tasks.
-     * @param tasks The list of tasks
-     * @param tasksToRemove The subset of tasks.
-     * @return The modified tasks after removal of the subset from tasks.
-     */
-    public static TestTask[] removeTasksFromList(final TestTask[] tasks, TestTask... tasksToRemove) {
-        List<TestTask> listOfTasks = asList(tasks);
-        listOfTasks.removeAll(asList(tasksToRemove));
-        return listOfTasks.toArray(new TestTask[listOfTasks.size()]);
-    }
-
-
-    /**
-     * Returns a copy of the list with the task at specified index removed.
-     * @param list original list to copy from
-     * @param targetIndexInOneIndexedFormat e.g. index 1 if the first element is to be removed
-     */
-    public static TestTask[] removeTaskFromList(final TestTask[] list, int targetIndexInOneIndexedFormat) {
-        return removeTasksFromList(list, list[targetIndexInOneIndexedFormat - 1]);
-    }
-
-    /**
-     * Replaces tasks[i] with a task.
-     * @param tasks The array of tasks.
-     * @param task The replacement task
-     * @param index The index of the task to be replaced.
-     * @return
-     */
-    public static TestTask[] replaceTaskFromList(TestTask[] tasks, TestTask task, int index) {
-        tasks[index] = task;
-        return tasks;
-    }
-
-    /**
-     * Appends tasks to the array of tasks.
-     * @param tasks A array of tasks.
-     * @param tasksToAdd The tasks that are to be appended behind the original array.
-     * @return The modified array of tasks.
-     */
-    public static TestTask[] addTasksToList(final TestTask[] tasks, TestTask... tasksToAdd) {
-        List<TestTask> listOfTasks = asList(tasks);
-        listOfTasks.addAll(asList(tasksToAdd));
-        return listOfTasks.toArray(new TestTask[listOfTasks.size()]);
-    }
-
-    private static <T> List<T> asList(T[] objs) {
-        List<T> list = new ArrayList<>();
-        for (T obj : objs) {
-            list.add(obj);
-        }
-        return list;
-    }
-
-    public static boolean compareCardAndTask(TaskCardHandle card, ReadOnlyTask task) {
-        return card.isSameTask(task);
-    }
-
-    public static Tag[] getTagList(String tags) {
-        if ("".equals(tags)) {
-            return new Tag[]{};
-        }
-
-        final String[] split = tags.split(", ");
-
-        final List<Tag> collect = Arrays.asList(split).stream().map(e -> {
-            try {
-                return new Tag(e.replaceFirst("Tag: ", ""));
-            } catch (IllegalValueException e1) {
-                //not possible
-                assert false;
-                return null;
-            }
-        }).collect(Collectors.toList());
-
-        return collect.toArray(new Tag[split.length]);
-    }
-
-}
-```
-###### /java/seedu/ezdo/testutil/TypicalTestTasks.java
+###### \java\seedu\ezdo\testutil\TypicalTestTasks.java
 ``` java
 /**
  * Generates the tasks for testing.
  */
 public class TypicalTestTasks {
 
+    private static final String MESSAGE_NOT_POSSIBLE = "not possible";
     public TestTask alice, benson, carl, daniel, elle, fiona, george, hoon, ida, jack, kappa, leroy, megan;
     public TestTask alice2, benson2, carl2, daniel2, elle2, fiona2, george2;
 
@@ -646,7 +379,7 @@ public class TypicalTestTasks {
 
         } catch (IllegalValueException e) {
             e.printStackTrace();
-            assert false : "not possible";
+            assert false : MESSAGE_NOT_POSSIBLE;
         }
     }
 
@@ -655,7 +388,7 @@ public class TypicalTestTasks {
             try {
                 ez.addTask(new Task(task));
             } catch (UniqueTaskList.DuplicateTaskException e) {
-                assert false : "not possible";
+                assert false : MESSAGE_NOT_POSSIBLE;
             }
         }
     }
@@ -665,7 +398,7 @@ public class TypicalTestTasks {
             try {
                 ez.addTask(new Task(task));
             } catch (UniqueTaskList.DuplicateTaskException e) {
-                assert false : "not possible";
+                assert false : MESSAGE_NOT_POSSIBLE;
             }
         }
     }
@@ -690,7 +423,7 @@ public class TypicalTestTasks {
 
 }
 ```
-###### /java/seedu/ezdo/testutil/TypicalTestTasks.java
+###### \java\seedu\ezdo\testutil\TypicalTestTasks.java
 ``` java
 
 ```
